--- a/css/css.css
+++ b/css/css.css
@@ -14,6 +14,23 @@ body{
 .dropdown-menu li.dropdown-header{
     color: white;
 }
+.jumbotron{
+    background-image: url(../images/thai1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.jumb_about{
+background-image: url(../images/thai2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+}
+.jumb_contact{
+    background-image: url(../images/thai3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+}
 .tab-content{
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
