--- a/css/css.css
+++ b/css/css.css
@@ -19,6 +19,8 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    color:white;
+    text-shadow: 2px 2px 4px #000000;
 }
 .jumb_about{
 background-image: url(../images/thai5.jpg);
