--- a/css/css.css
+++ b/css/css.css
@@ -94,6 +94,31 @@ background-image: url(../images/thai5.jpg);
 .calls{
     padding-bottom: 10px;
 }
+.menu-img{
+    position: relative;
+
+}
+.menu-title{
+    position: absolute;
+     top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+}
+.hr{
+    width: 100%;
+    height: 2px;
+    background-color: darkred;
+    margin:20px;
+}
+.food-title{
+    color:darkred
+}
+.food{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 footer{
     color: white;
     background-color: #3c3c3c;
