--- a/css/css.css
+++ b/css/css.css
@@ -96,7 +96,7 @@ background-image: url(../images/thai5.jpg);
 }
 .menu-img{
     position: relative;
-
+    margin-bottom: 10px;
 }
 .menu-title{
     position: absolute;
@@ -110,7 +110,8 @@ background-image: url(../images/thai5.jpg);
     width: 100%;
     height: 2px;
     background-color: darkred;
-    margin:20px;
+    margin-top:20px;
+    margin-bottom: 20px;
 }
 .food-title{
     color:darkred
